<?xml version="1.0"?>
<package format="2">
  <name>hanwhabot_v1</name>
  <version>0.0.0</version>
  <description>The hanwhabot_v1 package</description>
  <maintainer email="cjh@todo.todo">cjh</maintainer>
v3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>hanwhabot_camera</exec_depend>
  <exec_depend>hanwhabot_detect</exec_depend>
  <exec_depend>hanwhabot_navigation</exec_depend>
  <exec_depend>hanwhabot_control</exec_depend>
  <exec_depend>hanwhabot_mission</exec_depend>
  <export>
    <metapackage/>
  </export>
</package>
